<?xml version="1.0"?>
<package>
  <name>dobot_bringup</name>
  <version>0.0.0</version>
  <description>The dobot_bringup package</description>

  <maintainer email="wouter@caarls.org">Wouter Caarls</maintainer>

  <license>BSD</license>

  <author email="wouter@caarls.org">Wouter Caarls</author>
  <author email="liuzhufu@dobot.cc">Liu Zhufu</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dobot_driver</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dobot_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dobot_driver</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dobot_msgs</run_depend>
</package>
