<?xml version="1.0"?>
<package>
  <name>dobot_msgs</name>
  <version>0.0.0</version>
  <description>The dobot_msgs package</description>

  <maintainer email="wouter@caarls.org">Wouter Caarls</maintainer>

  <license>BSD</license>

  <author email="liuzhufu@dobot.cc">Liu Zhufu</author> -->
  <author email="wouter@caarls.org">Wouter Caarls</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
